add favicon + discord embed

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
+    <meta property="og:url" content="https://cxntered,xyz/crown" />
+    <meta property="og:site_name" content="Technoblade Crown Adder" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="🐷 Technoblade Crown Adder 👑" />
+    <meta property="og:description" content="A simple website for adding Technoblade's crown to any person's skin." />
+    <meta property="og:image" content="https://crafatar.com/avatars/b876ec32-e396-476b-a115-8438d83c67d4" />
+    <meta name="theme-color" content="#efa9a7" />
     <title>Technoblade Crown Adder</title>
 </head>
 
