--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <div class="main">
         <h1 class="header">🐷 Technoblade Crown Adder 👑</h1>
-        <p class="description">Adds Technoblade's crown to your skin. Created by cxntered in 2 and a half hours.
+        <p class="description">Adds Technoblade's crown to your skin. Created by cxntered in two and a half hours.
         <p class="warning">I am not liable for how it looks. This app simply takes Technoblade's crown from his skin and
             pastes it on top of your skin.</p>
         </p>
