change favicon and embed icon

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="🐷 Technoblade Crown Adder 👑" />
     <meta property="og:description" content="A simple website for adding Technoblade's crown to any person's skin." />
-    <meta property="og:image" content="https://crafatar.com/avatars/b876ec32-e396-476b-a115-8438d83c67d4" />
+    <meta property="og:image" content="https://crafatar.com/avatars/b876ec32-e396-476b-a115-8438d83c67d4?overlay" />
     <meta name="theme-color" content="#efa9a7" />
     <title>Technoblade Crown Adder</title>
 </head>
