IM A FUCKING IDIOT
I SAID PIECE INSTEAD OF PEACE

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <div class="footer">
             <p class="description" style="font-style: italic;">
-                In honour of Technoblade/Alex. Fly high, and may you rest in piece. 🕊️
+                In honour of Technoblade/Alex. Fly high, and may you rest in peace. 🕊️
             </p>
         </div>
     </div>
