--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
 <body>
     <div class="main">
         <h1 class="header">🐷 Technoblade Crown Adder 👑</h1>
-        <p class="description">Adds Technoblade's crown to your skin. Created by cxntered in two and a half hours.
+        <p class="description">Adds Technoblade's crown to your skin. Created by cxntered in two and a half hours.</p>
         <p class="warning">I am not liable for how it looks. This app simply takes Technoblade's crown from his skin and
             pastes it on top of your skin.</p>
-        </p>
+        <p class="warning">WARNING: Some pre-1.8 skins, such as Notch's, do not work properly as the transparency has
+            been replaced with black.</p>
 
         <div class="form">
             <div class="input-container ic1">
