--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:description" content="A simple website for adding Technoblade's crown to any person's skin." />
     <meta property="og:image" content="https://crafatar.com/avatars/b876ec32-e396-476b-a115-8438d83c67d4?overlay" />
     <meta name="theme-color" content="#efa9a7" />
-    <title>Technoblade Crown Adder</title>
+    <title>🐷 Technoblade Crown Adder 👑</title>
 </head>
 
 <body>
