👌 IMPROVE: update display canvas

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 
         <div class="download" id="download" style="visibility: hidden;">
             <div style="text-align: center;">
-                <canvas id="displayCanvas" style="pointer-events: none; margin-bottom: 20px;" width="128" height="128">
-                    No canvas support :/
+                <canvas id="displayCanvas"
+                    style="user-select: none; -webkit-user-select: none; -ms-user-select: none; pointer-events: none; margin-bottom: 20px;"
+                    width="128" height="128">
                 </canvas>
             </div>
 
