🐛 FIX: fix footer bug

--- a/index.html
+++ b/index.html
@@ -44,14 +44,13 @@
         </div>
     </main>
 
-    <!-- Footer -->
     <footer class="container" style="text-align: center; ">
         <hr>
         <small>
             © 2023 • cxntered • <a href="https://github.com/cxntered/crown/issues">Report bugs here</a> <br>
             Made in honor of Technoblade. Fly high, and may you rest in peace. 🕊️
         </small>
-    </footer><!-- ./ Footer -->
+    </footer>
 
     <dialog id="errorModal">
         <article>
