--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
 
     <canvas id="canvas" style="display: none;"></canvas>
 
-    <script defer>document.querySelector('body *').addEventListener('touchstart', function() { });</script>
     <script src="./assets/js/script.js" defer></script>
+    <script src="./assets/js/modal.js" defer></script>
+    <script defer>document.querySelector('body *').addEventListener('touchstart', function() { });</script>
 </body>
 
 </html>
