👌 IMPROVE: small updates

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
     <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
-    <meta property="og:url" content="https://cxntered,xyz/crown" />
+    <meta property="og:url" content="https://crown.cxntered.dev" />
     <meta property="og:site_name" content="Technoblade Crown Adder" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="🐷 Technoblade Crown Adder 👑" />
@@ -47,8 +47,9 @@
     <footer class="container" style="text-align: center; ">
         <hr>
         <small>
-            © 2023 • cxntered • <a href="https://github.com/cxntered/crown/issues">Report bugs here</a> <br>
-            Made in honor of Technoblade. Fly high, and may you rest in peace. 🕊️
+            © 2024 • <a href="https://cxntered.dev">cxntered</a> • <a
+                href="https://github.com/cxntered/crown/issues">Report bugs here</a> <br>
+            Made in honor of Technoblade. Fly high, and may you rest in peace. 🕊️ <br>
         </small>
     </footer>
 
